mvp css stylesheeet 적용

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,7 +4,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom 
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
-        h1 It works!
+    header 
+        h1 Noom
+    main 
+        h2 Welcome to Noom
         button Call
         script(src="public/js/app.js")
