출력 오류 해결 - utf-8 문자열로 만듦

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom 
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
@@ -12,5 +13,5 @@ html(lang="en")
         ul 
         form 
             input(type="text", placeholder="write a msg", required)
-        button Send
+            button Send
         script(src="public/js/app.js")
